--- a/examples/AN00218_app_hires_DAS_fixed/doc/rst/AN00218.rst
+++ b/examples/AN00218_app_hires_DAS_fixed/doc/rst/AN00218.rst
@@ -26,7 +26,7 @@ How to use lib_mic_array with high resolution delay lines
 The Makefile
 ............
 
-To start using the high resolution delay lines, you need to add ``lib_mic_array`` to you Makefile::
+To start using the  microphone array library with high resolution delay lines, you need to add ``lib_mic_array`` to you Makefile::
 
   USED_MODULES = .. lib_mic_array ...
 
@@ -69,9 +69,10 @@ Also required is support for |I2S| and |I2C| through the headers:
 Allocating hardware resources
 .............................
 
-An PDM microphone requires a clock and a data pin. For eight PDM mocrophones a single clock can be shared
- between all microphones and the data can be sampled on a single 8 bit port. On an xCORE the pins are
-controlled by ``ports``. The application therefore declares one 1-bit port and one 8-bit port:
+A PDM microphone requires a clock and a data pin. For eight PDM mocrophones a single 
+clock can be shared between all microphones and the data can be sampled on a single 
+8 bit port. On an xCORE the pins are controlled by ``ports``. The application therefore 
+declares one 1-bit port and one 8-bit port:
 
 .. literalinclude:: app_hires_DAS_fixed.xc
    :start-on: in port p_pdm_clk
@@ -161,20 +162,22 @@ Task setup
 ----------
 
 The PDM microphones interface task, high resolution delay task and the decimators have to be connected 
-together and to the application (``hires_DAS_fixed()``). There needs to be one ``decimate_to_pcm_4ch()`` task per
-four channels that need processing. The needs to be one ``hires_delay`` task per eight channels.
-The PDM interface task, ``pdm_rx()`` can process eight channels so only one is needed per eight channels. 
-The PDM interface needs to be connected to the high resolution interface via two streaming channels and 
-connected to the two decimators via streaming channels. Finally, the decimators have to be connected to 
+together and to the application (``hires_DAS_fixed()``). There needs to be one 
+``mic_array_decimate_to_pcm_4ch()`` task per four channels that need processing. 
+There needs to be only one ``mic_array_hires_delay`` task for up to 16 channels.
+The PDM interface task, ``mic_array_pdm_rx()`` can process eight channels so only 
+one is needed for this application. The PDM interface needs to be connected to the 
+high resolution interface via two streaming channels and connected to the two 
+decimators via streaming channels. Finally, the decimators have to be connected to 
 the application.
 
 .. literalinclude:: app_hires_DAS_fixed.xc
    :start-on: streaming chan c_pdm_to_hires[2];
-   :end-on: stop_clock(pdmclk);
+   :end-before: stop_clock(pdmclk);
 
 Note that the decimators have to be on the same tile as the application due to shared frame memory.	
-Finally, there needs to be a channel between the ``hires_delay`` and the application in order to issue
-the commands to change the taps on each delay line.
+Also, there needs to be a channel between the ``mic_array_hires_delay`` and the application in 
+order to issue the commands to change the taps on each delay line.
 
 Frame memory
 ------------
@@ -187,46 +190,53 @@ block must be::
 bytes. The data must also be double word aligned. For example:
 
 .. literalinclude:: app_hires_DAS_fixed.xc
-   :start-on: int data
-   :end-on: int data
+   :start-on: int data[8]
+   :end-before: void hires_DAS_fixed
   
 Note that on the xCORE-200 all global arrays are guaranteed to be double-word aligned.
 
 Configuration
 -------------
 
-Configuration for the example is achieved through:
+Configuration of the microphone array for the example is achieved through:
 
 .. literalinclude:: app_hires_DAS_fixed.xc
-   :start-on: decimator_config_common
-   :end-on: decimator_configure
+   :start-on: mic_array_decimator_config_common dcc =
+   :end-before:  mic_array_init_time_domain_frame
 
-All configuration options are enumerated in the Microphone array library. Once configured 
+All configuration options are described in the Microphone array library guide. Once configured 
 then the decimators require initialization via:
 
 .. literalinclude:: app_hires_DAS_fixed.xc
-   :start-on: decimator_init_audio_frame
+   :start-on: mic_array_init_time_domain_frame
    :end-before: while(1)
 
 The the decimators will start presenting samples in the form of frames that can be accessed with:
 
 .. literalinclude:: app_hires_DAS_fixed.xc
-   :start-on: decimator_get_next
-   :end-before: light the LED
+   :start-on: mic_array_frame_time_domain *  current =
+   :end-on: mic_array_get_next_time_domain_frame
 
-The return value of the above is a pointer to the frame that the application (``example()``) is allowed 
-to access. The ``current`` structure contains the frame data in the ``data`` member. ``data`` is a 2D array
-with the first index denoting the channel number and the second index denoting the frame index. The frame
-index used 0 for the oldest samples and 2 to the power of ``dcc.frame_size_log2`` minus one as the newest
-samples.
+The return value of ``mic_array_get_next_time_domain_frame()`` is a pointer to the frame that 
+the application is allowed to access. The ``current`` frame contains the frame data in the 
+``data`` member. ``data`` is a 2D array with the first index denoting the channel number and 
+the second index denoting the frame index. The frame index used 0 for the oldest samples and 
+increasing indicies for newer samples.
 
 Updating the delays
 -------------------
 
-The high resolution delay task is initially set to delay by a zero 384kHz clock cycles. Each channel can 
-be delayed by up to ``HIRES_MAX_DELAY`` (default 256) samples at a sample rate of 384kHz. Setting of the taps
-is done through the function ``hires_delay_set_taps();`` which will do an atomic update of all the 
+The high resolution delay task is initially set to delay all channels by a zero 384kHz clock cycles. Each channel can 
+be delayed by up to ``MIC_ARRAY_HIRES_MAX_DELAY`` (default 256) samples at a sample rate of 384kHz. Setting of the taps
+is done through the function ``mic_array_hires_delay_set_taps();`` which will do an atomic update of all the 
 active delay lines tap positions at once.
+
+Delay taps
+----------
+
+The delays on the microphones are calculated in a spread sheet included at the root folder of the application,
+``mic_array_das_beamformer_calcs.xls``. The beam is focused to a point of one meter away at an angle of
+thirty degrees from the plane of the microphone array in the direction indicated by the LEDs.
 
 References
 ----------
@@ -253,6 +263,7 @@ References
 
     http://www.xmos.com/support/libraries/lib_i2s
 
+	
 |newpage|
 
 Full source code listing
